--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ dark green: #28b485
 }
 
 body{
-    font-family: "Lato" sans-serif;
+    font-family: "Lato" , sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
@@ -20,6 +20,7 @@ body{
 }
 
 .header{
+    position: relative;
     height: 95vh;
     background-image: linear-gradient(to right ,rgba(126, 213, 111, 0.801),rgba(39, 180, 133, 0.801)  ), 
     url(../img/nature-photographers.jpg);
@@ -27,4 +28,34 @@ body{
     background-size: cover;
 }
 
+.logo-box{
+    position: absolute;
+    top: 40px;
+    left: 40px;
+}
+
+.logo{
+    height: 50px;
+}
+
+.heading-primary{
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.heading-primary-main{
+    display: block;
+    font-weight: 60px;
+    font-weight: 400;
+    letter-spacing: 35px;
+
+}
+
+.heading-primary-sub{
+    display: block;
+    font-size: 25px;
+    font-weight: 400;
+    letter-spacing: 5px;
+
+}
 
