--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,13 @@ body{
     height: 50px;
 }
 
+.text-box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .heading-primary{
     color: #fff;
     text-transform: uppercase;
