--- a/css/style.css
+++ b/css/style.css
@@ -53,16 +53,31 @@ body{
 .heading-primary-main{
     display: block;
     font-weight: 60px;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 35px;
+    animation-name: MoveInLeft;
+    animation-duration: 3s;
 
 }
 
 .heading-primary-sub{
     display: block;
     font-size: 25px;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 5px;
 
 }
 
+@keyframes MoveInLeft{
+    0%{
+        opacity: 0;
+        transform:translateX(-100px);
+      }
+     
+      100%{
+          opacity: 1;
+          transform:translate(1);
+     
+      }     
+
+}
