backface visibility hidden

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ body{
 .heading-primary{
     color: #fff;
     text-transform: uppercase;
+    backface-visibility: hidden;
 }
 
 .heading-primary-main{
