--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,9 @@ body{
 
 .heading-primary-main{
     display: block;
-    font-weight: 60px;
-    font-weight: 700;
-    letter-spacing: 35px;
+    font-size: 50px;
+    font-weight: 900;
+    letter-spacing: 25px;
     animation-name: MoveInLeft;
     animation-duration: 3s;
     animation-delay: 2s;
