--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,13 @@ dark green: #28b485
     box-sizing: border-box;
 }
 
+html{
+    font-size: 10px;
+}
 body{
     font-family: "Lato" , sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    /*font-size: 16px;*/
     line-height: 1.7;
     color: #777;
 }
