--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,12 @@ body{
 
 .logo-box{
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
 
 .logo{
-    height: 50px;
+    height: 5rem;
 }
 
 .text-box{
@@ -53,14 +53,14 @@ body{
     color: #fff;
     text-transform: uppercase;
     backface-visibility: hidden;
-    margin-bottom: 50px;
+    margin-bottom: 5rem;
 }
 
 .heading-primary-main{
     display: block;
-    font-size: 50px;
+    font-size: 5rem;
     font-weight: 900;
-    letter-spacing: 25px;
+    letter-spacing: 2.5rem;
     animation-name: MoveInLeft;
     animation-duration: 3s;
     animation-delay: 2s;
@@ -69,9 +69,9 @@ body{
 
 .heading-primary-sub{
     display: block;
-    font-size: 25px;
+    font-size: 2.5rem;
     font-weight: 700;
-    letter-spacing: 5px;
+    letter-spacing: 0.5rem;
     animation-name: MoveInRight;
     animation-duration: 2s;
     animation-delay: 2s;
@@ -81,11 +81,11 @@ body{
 @keyframes MoveInLeft{
     0%{
         opacity: 0;
-        transform:translateX(-100px);
+        transform:translateX(-10rem);
       }
 
       80%{
-          transform: translateX(10px);
+          transform: translateX(1rem);
       }
      
       100%{
@@ -99,10 +99,10 @@ body{
 @keyframes MoveInRight{
     0%{
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
     80%{
-        transform: translate(-10px);
+        transform: translate(-1rem);
     }
 
     100%{
@@ -115,22 +115,22 @@ body{
 .btn:visited{
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 100px;
+    border-radius: 10rem;
     transition: all .2s;
     position: relative;
 }
 
 .btn:hover{
-     transform: translateY(-3px);
-     box-shadow: 0 10px 20px rgba(0,0,0,.2);
+     transform: translateY(-0.3rem);
+     box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
      
 }
 
 .btn:active{
     transform: translateY(-1);
-    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.2);
 }
 
 .btn-white{
