--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ dark green: #28b485
 *{
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 
 html{
@@ -20,6 +20,7 @@ body{
     /*font-size: 16px;*/
     line-height: 1.7;
     color: #777;
+    box-sizing: border-box;
 }
 
 .header{
