--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@ medium green: #55c57a
 dark green: #28b485
 */
 
-*{
+*,
+::before,
+::after{
     margin: 0px;
     padding: 0px;
     box-sizing: inherit;
