afer and before pseudo element

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@ dark green: #28b485
 */
 
 *,
-::before,
-::after{
+::after,
+::before{
     margin: 0px;
     padding: 0px;
     box-sizing: inherit;
