--- a/css/style.css
+++ b/css/style.css
@@ -34,17 +34,17 @@ body{
     background-size: cover;
 }
 
-.logo-box{
+.header__logo-box{
     position: absolute;
     top: 4rem;
     left: 4rem;
 }
 
-.logo{
+.header__logo{
     height: 5rem;
 }
 
-.text-box{
+.header__text-box{
     position: absolute;
     top: 40%;
     left: 50%;
@@ -59,7 +59,7 @@ body{
     margin-bottom: 5rem;
 }
 
-.heading-primary-main{
+.heading-primary--main{
     display: block;
     font-size: 5rem;
     font-weight: 900;
@@ -70,7 +70,7 @@ body{
 
 }
 
-.heading-primary-sub{
+.heading-primary--sub{
     display: block;
     font-size: 2.5rem;
     font-weight: 700;
@@ -137,7 +137,7 @@ body{
     box-shadow: 0 0.5rem 1rem rgba(0,0,0,.2);
 }
 
-.btn-white{
+.btn--white{
     background-color: #fff;
     color: #777;
 }
