--- a/css/style.css
+++ b/css/style.css
@@ -4,162 +4,128 @@ light green: #7ed56f
 medium green: #55c57a
 dark green: #28b485
 */
-
 *,
 ::after,
-::before{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: inherit;
-}
+::before {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: inherit; }
 
-html{
-    font-size: 62.5%;
-}
-body{
-    font-family: "Lato" , sans-serif;
-    font-weight: 400;
-    /*font-size: 16px;*/
-    line-height: 1.7;
-    color: #777;
-    box-sizing: border-box;
-}
+html {
+  font-size: 62.5%; }
 
-.header{
-    position: relative;
-    height: 100vh;
-    background-image: linear-gradient(to right ,rgba(126, 213, 111, 0.801),rgba(39, 180, 133, 0.801)  ), 
-    url(../img/nature-photographers.jpg);
-    background-position: center;
-    background-size: cover;
-}
+body {
+  font-family: "Lato" , sans-serif;
+  font-weight: 400;
+  /*font-size: 16px;*/
+  line-height: 1.7;
+  color: #777;
+  box-sizing: border-box; }
 
-.header__logo-box{
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-}
+.header {
+  position: relative;
+  height: 100vh;
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.801), rgba(40, 180, 133, 0.801)), url(../img/nature-photographers.jpg);
+  background-position: center;
+  background-size: cover; }
 
-.header__logo{
-    height: 5rem;
-}
+.header__logo-box {
+  position: absolute;
+  top: 4rem;
+  left: 4rem; }
 
-.header__text-box{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
+.header__logo {
+  height: 5rem; }
 
-.heading-primary{
-    color: #fff;
-    text-transform: uppercase;
-    backface-visibility: hidden;
-    margin-bottom: 5rem;
-}
+.header__text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; }
 
-.heading-primary--main{
-    display: block;
-    font-size: 5rem;
-    font-weight: 900;
-    letter-spacing: 2.5rem;
-    animation-name: MoveInLeft;
-    animation-duration: 3s;
-    animation-delay: 2s;
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 5rem; }
 
-}
+.heading-primary--main {
+  display: block;
+  font-size: 5rem;
+  font-weight: 900;
+  letter-spacing: 2.5rem;
+  animation-name: MoveInLeft;
+  animation-duration: 3s;
+  animation-delay: 2s; }
 
-.heading-primary--sub{
-    display: block;
-    font-size: 2.5rem;
-    font-weight: 700;
-    letter-spacing: 0.5rem;
-    animation-name: MoveInRight;
-    animation-duration: 2s;
-    animation-delay: 2s;
+.heading-primary--sub {
+  display: block;
+  font-size: 2.5rem;
+  font-weight: 700;
+  letter-spacing: 0.5rem;
+  animation-name: MoveInRight;
+  animation-duration: 2s;
+  animation-delay: 2s; }
 
-}
+@keyframes MoveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
 
-@keyframes MoveInLeft{
-    0%{
-        opacity: 0;
-        transform:translateX(-10rem);
-      }
-
-      80%{
-          transform: translateX(1rem);
-      }
-     
-      100%{
-          opacity: 1;
-          transform:translate(0);
-     
-      }     
-
-}
-
-@keyframes MoveInRight{
-    0%{
-        opacity: 0;
-        transform: translateX(10rem);
-    }
-    80%{
-        transform: translate(-1rem);
-    }
-
-    100%{
-        opacity: 1;
-        transform: translate(0);
-    }
-}
+@keyframes MoveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translate(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
 
 .btn:link,
-.btn:visited{
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: all .2s;
-    position: relative;
-    font-size: 1.6rem;
-}
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all .2s;
+  position: relative;
+  font-size: 1.6rem; }
 
-.btn:hover{
-     transform: translateY(-0.3rem);
-     box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
-     
-}
+.btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
 
-.btn:active{
-    transform: translateY(-1);
-    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.2);
-}
+.btn:active {
+  transform: translateY(-1);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
-.btn--white{
-    background-color: #fff;
-    color: #777;
-}
+.btn--white {
+  background-color: #fff;
+  color: #777; }
 
-.btn::after{
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
-}
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s; }
 
-.btn--white::after{
-    background-color: #fff;
-}
+.btn--white::after {
+  background-color: #fff; }
 
-.btn:hover::after{
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-}
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0; }
