add color variable black to sass/main.scss

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,9 @@ dark green: #28b485
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
-
+$color-grey-dark:#777777;
+$color-white:#fff;
+$color-black: #000;
 *,
 ::after,
 ::before{
@@ -25,7 +27,7 @@ body{
     font-weight: 400;
     /*font-size: 16px;*/
     line-height: 1.7;
-    color: #777;
+    color: $color-grey-dark;
     box-sizing: border-box;
 }
 
@@ -59,7 +61,7 @@ body{
 }
 
 .heading-primary{
-    color: #fff;
+    color: $color-white;
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 5rem;
@@ -134,18 +136,18 @@ body{
 
 .btn:hover{
      transform: translateY(-0.3rem);
-     box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
+     box-shadow: 0 1rem 2rem rgba($color-black,.2);
      
 }
 
 .btn:active{
     transform: translateY(-1);
-    box-shadow: 0 0.5rem 1rem rgba(0,0,0,.2);
+    box-shadow: 0 0.5rem 1rem rgba($color-black,.2);
 }
 
 .btn--white{
-    background-color: #fff;
-    color: #777;
+    background-color:$color-white;
+    color: $color-grey-dark;
 }
 
 .btn::after{
@@ -162,7 +164,7 @@ body{
 }
 
 .btn--white::after{
-    background-color: #fff;
+    background-color: $color-white;
 }
 
 .btn:hover::after{
